can select how long you want to sample the song, results may not be better because the test acc is still bad

--- a/cnn-genre-classifier-wpytorch.ipynb
+++ b/cnn-genre-classifier-wpytorch.ipynb
@@ -1412,6 +1412,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#can analyze song for any desired length and average to find what genre is overall most prevalent\n",
+    "#although since the test acc isnt so good to begin with improvement isnt much\n",
+    "\n",
     "def input_process_and_query():\n",
     "    \"\"\"\n",
     "    docstring\n",
@@ -1423,18 +1426,23 @@
     "    # get filepath given filename\n",
     "    song = os.path.join(f\"{filepath}\")\n",
     "    # load in 5 seconds of audio for this sound file\n",
-    "    y, sr = librosa.load(song, duration=5)\n",
-    "    # use time-series and sampling-rate to get mel-spectrogram as np array\n",
-    "    mels = librosa.feature.melspectrogram(y=y, sr=sr)\n",
-    "    # creates a new \"Figure\" (for displaying data)\n",
-    "    mels = mels[np.newaxis, np.newaxis,...]\n",
-    "    mels = mels/255\n",
+    "    \n",
+    "    melslist = []\n",
+    "    for i in range(1):    #loads the input song for range * 5 seconds\n",
+    "        y, sr = librosa.load(song, duration=5)\n",
+    "        # use time-series and sampling-rate to get mel-spectrogram as np array\n",
+    "        mels = librosa.feature.melspectrogram(y=y, sr=sr)\n",
+    "        # creates a new \"Figure\" (for displaying data)\n",
+    "        mels = mels[np.newaxis, ...]\n",
+    "        mels = mels/255\n",
+    "        melslist.append(mels)\n",
+    "    mels = np.stack(melslist)   \n",
     "    mels = torch.tensor(mels)\n",
     "    predictionsfreqs = model(mels)\n",
     "    predictionsfreqs = predictionsfreqs.detach().numpy()\n",
-    "    \n",
+    "    predictionsfreqs = np.mean(predictionsfreqs, axis = 0)\n",
     "    finalpred = genreslist[np.argmax(predictionsfreqs)]\n",
-    "    \n",
+    "    #could convert to probabilities here if wanted\n",
     "    %matplotlib notebook\n",
     "    data = predictionsfreqs.flatten()\n",
     "    print(data.shape)\n",
