--- a/cnn-genre-classifier-wpytorch.ipynb
+++ b/cnn-genre-classifier-wpytorch.ipynb
@@ -130,7 +130,7 @@
     "    -------\n",
     "    float\n",
     "    '''''\n",
-    "    return np.mean(np.argmax(predictions, axis=1) == truth) \n",
+    "    return np.mean(np.argmax(predictions, axis=1) == truthdata) \n",
     "\n"
    ]
   },
